--- a/project03/package.json
+++ b/project03/package.json
@@ -16,6 +16,7 @@
     "three": "^0.166.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
