--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# dependencies
+.pnp
+.pnp.js
+.yarn/install-state.gz
 node_modules
 dist
 dist-ssr
@@ -23,6 +27,7 @@ dist-ssr
 *.sln
 *.sw?
 
+# env
 .env
 .env.local
 .env.development
@@ -31,3 +36,30 @@ dist-ssr
 .env.production.local
 .env.test
 .env.test.local
+.env*.local
+
+# testing
+coverage
+
+# next.js
+.next/
+out/
+
+# production
+build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
