--- a/project05/package.json
+++ b/project05/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
