--- a/project05/package.json
+++ b/project05/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.109.5",
+    "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.1.9"
+    "swiper": "^11.1.9",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
