--- a/project05/package.json
+++ b/project05/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.3.21",
+    "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
